feat: implement pre filter status, implement order generic